<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearProductos">

    <TextView
        android:id="@+id/tv_title_creaprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/crear_producto"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/creaprod_cat"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        app:layout_constraintBottom_toTopOf="@id/creaprod_nombre"
        app:layout_constraintStart_toStartOf="@id/creaprod_nombre"
        app:layout_constraintEnd_toEndOf="@id/creaprod_nombre"/>

    <EditText
        android:id="@+id/creaprod_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre_del_producto"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@id/creaprod_desc"
        app:layout_constraintBottom_toTopOf="@id/creaprod_desc"
        android:importantForAutofill="no" tools:targetApi="O" />

    <EditText
        android:id="@+id/creaprod_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descripci_n"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:importantForAutofill="no" tools:targetApi="O" />

    <EditText
        android:id="@+id/creaprod_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/precio"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@id/creaprod_desc"
        app:layout_constraintTop_toBottomOf="@id/creaprod_desc"
        tools:targetApi="O" />

    <Button
        android:id="@+id/creaprod_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        app:layout_constraintTop_toBottomOf="@id/creaprod_precio"
        app:layout_constraintStart_toStartOf="@id/creaprod_precio"/>

    <Button
        android:id="@+id/creaprod_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        app:layout_constraintEnd_toEndOf="@id/creaprod_precio"
        app:layout_constraintTop_toBottomOf="@id/creaprod_precio" />
</android.support.constraint.ConstraintLayout>